@@ -253,7 +253,8 @@ Changes on 1.2.0 since 1.1.0:
     directive in the code.
 
 * Added new menu option 'Tools'->'Run a Command in Current Folder' to run
-    an arbitrary command line from the folder opened in current tab.
+    an arbitrary command line from the folder opened in current tab. This
+    option works only with LibFM 1.2.0 or newer.
 
 
 Changes on 1.1.0 since 1.0.1:
